# tester

./: .env  .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
app/: __init__.py  config.py  database.py
app/apis/models/: level.py  problem.py  submission.py  user.py  users.py
app/apis/repository/: problem.py
app/apis/routers/: level.py  problem.py  users.py
app/apis/schemas/: problem.py  users.py
app/apis/services/: level.py  problem.py  users.py
app/llms/: base.py
app/llms/ollama/: level.py  problem.py
app/utils/: parsers.py
migrations/: env.py
migrations/versions/: 8eb889ebaf96_user.py  a636b1edbde0_problem.py
