[project]
name = "codingtest"
version = "0.1.0"
description = "AI-powered coding test generation, verification, and evaluation system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.20",
    "chromadb>=0.4.22",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.0",
    "langchain-ollama>=0.3.2",
]
