[project]
name = "codingtest"
version = "0.1.0"
description = "AI-powered coding test generation, verification, and evaluation system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.20",
    "chromadb>=0.4.22",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.0",
    "langchain-ollama>=0.3.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.6",
]

[tool.ruff]
target-version = "py312"
line-length = 119
extend-exclude = [
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
ignore = [
]


[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

# Per-module options
[[tool.mypy.overrides]]
module = "migrations.*"
ignore_errors = true

# Third-party libraries without type hints
[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "langchain.*",
    "langchain_community.*",
    "langchain_core.*",
    "langgraph.*",
    "chromadb.*",
]
ignore_missing_imports = true
